# casm-derived-template

./: CONTCAR_a  Makefile.am  POSCAR_a  README.md  configure.ac
src/: Makemodule.am  main.cpp
