#Store macros locally
CLOCAL_AMFLAGS = -I build-aux/m4

#===========================================================================#
#Values are filled by Makemodue.am files
bin_PROGRAMS=
noinst_LIBRARIES=

AM_CXXFLAGS=

AM_CPPFLAGS=

AM_LDFLAGS=$(BOOST_LDFLAGS)


#===========================================================================#
#Now do the programs
include $(srcdir)/src/Makemodule.am


#===========================================================================#
EXTRA_DIST=
